# lumina

./: devspace.yaml  readme.md
.circleci/: config.yml
.circleci/images/: Dockerfile
.devspace/: generated.yaml
api/backend/: Cargo.toml
backend/: Cargo.toml  Dockerfile
backend/api/: Cargo.toml
backend/api/src/: lib.rs  main.rs
backend/api/src/errors/: mod.rs
backend/api/src/graph/: mod.rs
backend/api/src/middleware/: authentication.rs  cors.rs  error.rs  mod.rs  mongo.rs  secret.rs
backend/api/src/models/: card.rs  mod.rs  organisation.rs  organisation_member.rs  root.rs  user.rs
backend/api/tests/: cors.rs  shared.rs  user_tests.rs
backend/backend_app/: Cargo.toml
backend/backend_app/src/: main.rs
backend/backend_app/src/graph/: mod.rs
backend/backend_app/src/middleware/: authentication.rs  error.rs  logger.rs  mod.rs
backend/backend_app/src/models/: user.rs
backend/derive_pinbox/: Cargo.toml
backend/secret_generator/: Cargo.toml
backend/secrets/: Cargo.toml
docs/: aws-role-setup.md  aws_role_setup.md  cluster_setup.md  deployment.md  domain-setup.md  drawbridge-ingress.md  ecr-setup.md  load-balancer.md  project_setup.md
frontend/: Dockerfile  package-lock.json  package.json  svelte.config.js  tsconfig.json
frontend/src/: app.d.ts  app.html  hooks.ts
ingress/: readme.md
kubernetes/: cluster-setup.md  deployment.md  env_subst  service-prep.js
kubernetes/development/: backend.yml  frontend.yml  ingress.yml
kubernetes/global/: drawbridge-ingress.yml
kubernetes/manual/: circle-ci-role.yml  drawbridge-ingress.yml  (+1 more)
(+120 files in other folders)
